[package]
authors = ["Patrick Fernie <patrick.fernie@gmail.com>"]
description = "Implementation of Cookie storage and retrieval"
name = "cookie_store"
version = "0.16.1"
edition = "2018"
repository = "https://github.com/pfernie/cookie_store"
documentation = "https://docs.rs/cookie_store"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cookie", "jar", "store", "http"]  # free text
categories = ["web-programming::http-client", "web-programming"]  # https://crates.io/category_slugs

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# uses `indexmap::IndexMap` in lieu of HashMap internally, so cookies are maintained in insertion/creation order
preserve_order = ["indexmap"]

[dependencies]
idna = "0.2.3"
log = "0.4.14"
publicsuffix = "2.1.1"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
# wasm support isn't released yet as of version v0.3.11. See: https://github.com/time-rs/time/pull/491
time = { git = "https://github.com/time-rs/time", rev = "7be38dc28c56eb5d4e1c250720803ecbaea4f283", default-features = false, features = ["std", "parsing", "formatting", "macros"] }
url = "2.2.2"

indexmap = { version = "1.6.2", optional = true }

[dependencies.cookie]
git = "https://github.com/jeanmertz/cookie-rs"
rev = "48ba15ad56ff8a9e5d65e89d0e3d09abbe2bda37"
features = ["percent-encode"]
